--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TableGames</title>
+  <title>BoardGames</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <tg-root></tg-root>
+  <bg-root></bg-root>
 </body>
 </html>
