--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Board Games</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="asstes/favicon.ico">
 </head>
+
 <body>
   <bg-root></bg-root>
 </body>
+
 </html>
