--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,22 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Board Games</title>
+    <base href="/" />
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Board Games</title>
-  <base href="/">
+    <meta name="copyright" content="MIT" />
+    <meta name="description" content="Free online board games" />
+    <meta
+      name="keywords"
+      content="board games, play board games, board games online, free board games"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  </head>
 
-  <meta name="copyright" content="MIT">
-  <meta name="description" content="Free online board games">
-  <meta name="keywords" content="board games, play board games, board games online, free board games">
-  <meta name="robots" content="index,follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-</head>
-
-<body>
-  <bg-root></bg-root>
-</body>
-
+  <body>
+    <bg-root></bg-root>
+  </body>
 </html>
