--- a/src/client/index.prod.html
+++ b/src/client/index.prod.html
@@ -1,32 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-128303301-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128303301-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+      gtag('config', 'UA-128303301-1');
+    </script>
 
-    gtag('config', 'UA-128303301-1');
-  </script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Board Games</title>
+    <base href="/" />
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Board Games</title>
-  <base href="/">
+    <meta name="copyright" content="MIT" />
+    <meta name="description" content="Free online board games" />
+    <meta
+      name="keywords"
+      content="board games, play board games, board games online, free board games"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  </head>
 
-  <meta name="copyright" content="MIT">
-  <meta name="description" content="Free online board games">
-  <meta name="keywords" content="board games, play board games, board games online, free board games">
-  <meta name="robots" content="index,follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-</head>
-
-<body>
-  <bg-root></bg-root>
-</body>
-
+  <body>
+    <bg-root></bg-root>
+  </body>
 </html>
